zabbix/zabbix-agent.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  creationTimestamp: null
  name: zabbix-agent
  labels:
    zabbix-app: zabbix-agent
spec:
  ports:
    - name: zabbix-agent
      port: 10050
      targetPort: 10050
  selector:
    zabbix-app: zabbix-agent

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: monitoring
  labels:
    zabbix-app: zabbix-agent
  name: zabbix-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      zabbix-app: zabbix-agent
  template:
    metadata:
      labels:
        zabbix-app: zabbix-agent
    spec:
      containers:
        - env:
            - name: ZBX_HOSTNAMEITEM
              valueFrom:
                configMapKeyRef:
                  key: ZBX_HOSTNAMEITEM
                  name: zabbix-app

            - name: ZBX_METADATA
              valueFrom:
                configMapKeyRef:
                  key: ZBX_METADATA
                  name: zabbix-app

            - name: ZBX_SERVER_HOST
              value: 10.32.0.3

            - name: TZ
              valueFrom:
                configMapKeyRef:
                  key: TZ
                  name: zabbix-app
                    
          image: zabbix/zabbix-agent
          name: zabbix-agent
          ports:
            - containerPort: 10050
          securityContext:
            privileged: true
