zabbix/zabbix-db-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-db-exporter
  namespace: zabbix
  labels:
    app: zabbix-db-exporter
spec:
  ports:
    - port: 9104
      targetPort: 9104
      name: metrics
  selector:
    app: zabbix-db-exporter
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-db-exporter
  namespace: zabbix
  labels:
    app: zabbix-db-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-db-exporter
  template:
    metadata:
      labels:
        app: zabbix-db-exporter
    spec:
      containers:
        - name: zabbix-db-exporter
          image: prom/mysqld-exporter:v0.14.0
          ports:
            - containerPort: 9104
          readinessProbe:
            httpGet:
              path: /metrics
              port: 9104
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /metrics
              port: 9104
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
