zabbix/zabbix-db.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  labels:
    app: zabbix-db
  name: zabbix-db
spec:
  ports:
    - name: zabbix-db
      port: 3306
      targetPort: 3306
  selector:
    app: zabbix-db

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: monitoring
  name: zabbix-db
  labels:
    app: zabbix-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-db
  template:
    metadata:
      labels:
        app: zabbix-db
    spec:
      containers:
        - args:
            - "--default-authentication-plugin=mysql_native_password"
            - --character-set-server=utf8
            - --collation-server=utf8_bin
          image: mysql:8.0
          name: zabbix-db
          ports:
            - containerPort: 3306
              #      volumes:
              #        - name: zabbix-db-storage
              #          persistentVolumeClaim:
              #            claimName: zabbix-db-pvc
              #
              #---
              #
#apiVersion: storage.k8s.io/v1
#kind: StorageClass
#metadata:
#  name: manual
#  namespace: monitoring
#provisioner: docker.io/hostpath
#reclaimPolicy: Retain
#
#---
#
              #apiVersion: v1
              #kind: PersistentVolume
              #metadata:
              #  namespace: monitoring
              #  name: zabbix-db-pv
              #  labels:
              #    type: local
              #    app: zabbix-db
              #spec:
              #  storageClassName: manual
              #  capacity:
              #    storage: 5Gi
              #  accessModes:
              #    - ReadWriteMany
              #  hostPath:
              #    path: "/mnt/mysql"
              #
              #---
              #
              #apiVersion: v1
              #kind: PersistentVolumeClaim
              #metadata:
              #  namespace: monitoring
              #  name: zabbix-db-pvc
              #  labels:
              #    app: zabbix-db
              #spec:
              #  storageClassName: manual
              #  accessModes:
              #    - ReadWriteMany
              #  resources:
              #    requests:
              #      storage: 5Gi
              #
              #---
              #
              #
