zabbix/zabbix-web-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web-exporter
  namespace: zabbix
  labels:
    app: zabbix-web-exporter
spec:
  selector:
    app: zabbix-web-exporter
  ports:
    - name: metrics
      port: 9116
      targetPort: 9116
  type: ClusterIP


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-web-exporter
  namespace: zabbix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-web-exporter
  template:
    metadata:
      labels:
        app: zabbix-web-exporter
    spec:
      containers:
      - name: zabbix-web-exporter
        image: alexanderzobnin/zabbix-exporter:latest
        ports:
        - containerPort: 9116
          name: metrics
